# Resume_optimization_CrewAI_Agents

./: README.md  pyproject.toml
output/: company_research.json  final_report.md  job_analysis.json  optimized_resume.md  resume_optimization.json
src/resume_crew/: crew.py  main.py  models.py
src/resume_crew/config/: agents.yaml  tasks.yaml
